# bigquery-table-history

./: Makefile  README.md  pyproject.toml
schemas/: information_schema_partitions_history.json
sql/: add_records.sql  get_target_datasets.sql
src/: add_records.py  diff_records.py  util.py
src/sql/: diff_records.sql
tests/: test_util.py
tests/sql/: test.sql
